logs/eboshi.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cliff'...
Listing './lib/python3.5/site-packages/cliff/formatters'...
Listing './lib/python3.5/site-packages/cliff/tests'...
Listing './lib/python3.5/site-packages/cliff-2.10.0.egg-info'...
Listing './lib/python3.5/site-packages/cmd2-0.7.9.egg-info'...
Listing './lib/python3.5/site-packages/eboshi'...
Compiling './lib/python3.5/site-packages/eboshi/create_project.py'...
***   File "./lib/python3.5/site-packages/eboshi/create_project.py", line 42
    print "create project succeeded. status=%s, path=%s, action=%s" % (jc.get("status"), jc.get("path"), jc.get("action"))
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/exec.py'...
***   File "./lib/python3.5/site-packages/eboshi/exec.py", line 73
    print jc.get("execid")
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/fetch_flow.py'...
***   File "./lib/python3.5/site-packages/eboshi/fetch_flow.py", line 37
    print jc.get("status")
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/get_most_recent_next_exec_time.py'...
***   File "./lib/python3.5/site-packages/eboshi/get_most_recent_next_exec_time.py", line 42
    print most_recent_next_exec_time.strftime("%Y-%m-%d %H:%M:%S")
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/get_schedule.py'...
***   File "./lib/python3.5/site-packages/eboshi/get_schedule.py", line 35
    print "firstSchedTime:%s, submitUser:%s, period:%s, scheduleId:%s, nextExecTime:%s" % (sc["firstSchedTime"], sc["submitUser"], sc["period"], sc["scheduleId"], sc["nextExecTime"])
                                                                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/list_schedules.py'...
***   File "./lib/python3.5/site-packages/eboshi/list_schedules.py", line 37
    print "flowname:%s, scheduleid:%s, projectname:%s, cron:%s, period:%s, time:%s, history:%s" % (flowname, scheduleid, projectname, cron, period, time, history)
                                                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/eboshi/upload.py'...
***   File "./lib/python3.5/site-packages/eboshi/upload.py", line 43
    print "upload succeeded."
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/eboshi-0.0.16.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pbr'...
Listing './lib/python3.5/site-packages/pbr/cmd'...
Listing './lib/python3.5/site-packages/pbr/hooks'...
Listing './lib/python3.5/site-packages/pbr/tests'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/data_files'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/doc/source'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/pbr_testpackage/package_data'...
Listing './lib/python3.5/site-packages/pbr/tests/testpackage/src'...
Listing './lib/python3.5/site-packages/pbr-3.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/prettytable-0.7.2.egg-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/stevedore'...
Listing './lib/python3.5/site-packages/stevedore/example'...
Listing './lib/python3.5/site-packages/stevedore/example2'...
Listing './lib/python3.5/site-packages/stevedore/tests'...
Listing './lib/python3.5/site-packages/stevedore-1.28.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
